fix layout of jump-to-view buttons

--- a/app/components/resources/list/row.scss
+++ b/app/components/resources/list/row.scss
@@ -34,25 +34,36 @@
     background-color: #fff;
     cursor: pointer;
 
-    .badge {
-      background-color: #8b96a0;
-    }
-
-    &:not(:hover) {
-      padding-left: 0;
-      padding-right: 0;
-
-      .mdi {
-        display: none;
-      }
-    }
-
     &:hover {
       color: darken(#868e96, 5%);
       background-color: darken($list-item-hover-color, 5%);
+    }
 
+    &.move-into-button {
       .badge {
-        display: none;
+        background-color: #8b96a0;
+      }
+
+      &:not(:hover) {
+        padding-left: 0;
+        padding-right: 0;
+
+        .mdi {
+          display: none;
+        }
+      }
+
+      &:hover {
+        .badge {
+          display: none;
+        }
+      }
+    }
+
+    &.jump-to-view-button {
+      .mdi {
+        position: relative;
+        right: 1px;
       }
     }
   }
